--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,3 @@
-.card {
-    position: relative;
-    display: inline-block;
-    width: 200px;
-    text-align: center;
-    padding: 3%;
-    background-color: rgb(223, 223, 223);
-    border-radius: 20px;
-    height: 100px;
-    max-height: 100%;
-}
-
 .name {
     position: absolute;
     color: white;
@@ -40,16 +28,25 @@
 
 .rayo {
     background-color: rgba(233, 222, 63, 0.8);
+    border-color: rgba(233, 222, 63);
 }
 
 .agua {
     background-color: rgb(77, 212, 230, 0.8);
+    border-color: rgb(77, 212, 230);
 }
 
 .fuego {
     background-color: rgb(218, 69, 69, 0.8);
+    border-color: rgb(218, 69, 69);
 }
 
 .tierra {
     background-color: rgb(156, 112, 61, 0.8);
+    border-color: rgb(156, 112, 61);
+}
+
+.lunar {
+    background-color: rgba(49, 48, 47, 0.8);
+    border-color: rgba(49, 48, 47);
 }
