--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,31 @@
+a {
+    text-decoration: none;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    margin-top: 0;
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+/*INDEX.PHP */
+.card {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    padding: 3%;
+    background-color: rgb(223, 223, 223);
+    border-radius: 20px;
+    height: 100px;
+    max-height: 100%;
+}
+
 .name {
     position: absolute;
     color: white;
@@ -28,25 +56,77 @@
 
 .rayo {
     background-color: rgba(233, 222, 63, 0.8);
-    border-color: rgba(233, 222, 63);
+    border: 2px solid rgba(233, 222, 63, 0.6);
 }
 
 .agua {
     background-color: rgb(77, 212, 230, 0.8);
-    border-color: rgb(77, 212, 230);
+    border: 2px solid rgb(77, 212, 230, 0.6);
 }
 
 .fuego {
     background-color: rgb(218, 69, 69, 0.8);
-    border-color: rgb(218, 69, 69);
+    border: 2px solid rgb(218, 69, 69, 0.6);
 }
 
 .tierra {
     background-color: rgb(156, 112, 61, 0.8);
-    border-color: rgb(156, 112, 61);
+    border: 2px solid rgb(156, 112, 61, 0.6);
 }
 
 .lunar {
     background-color: rgba(49, 48, 47, 0.8);
-    border-color: rgba(49, 48, 47);
+    border: 2px solid rgba(49, 48, 47, 0.6);
+}
+
+/* POKEINFO.PHP */
+
+.card-poke {
+    max-width: 75vw;
+    margin: 48px auto;
+    border-radius: 10px;
+}
+.container {
+    display: flex;
+}
+
+.col-1,
+.col-2 {
+    width: 100%;
+}
+.col-1 img {
+    display: block;
+    margin: auto;
+    width: 90%;
+}
+.col-2 {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background: rgb(255, 255, 255);
+    color: #121212;
+    padding: 48px;
+}
+
+.pokename {
+    font-size: 50px;
+}
+
+.pokeability {
+    position: relative;
+    color: white;
+    width: 30px;
+    padding: 0 20px;
+    border-radius: 8px;
+    background-color: #1a1919d7;
+}
+
+.pokedescription {
+    align-items: flex-end;
+    line-height: 30px;
+}
+
+@media (max-width: 1024px) {
+    .card-poke {
+        max-width: 95vw;
+    }
 }
